<resources>
    <string name="app_name">Test</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="str1">Happy Brithday!</string>
    <string name="str2">Your Jerry</string>
    <string name="description" translatable="false">background</string>
    <string name="tran_bot">Convert to Fahrenheit temperature</string>
    <string name="tran_input">Please enter degrees Celsius</string>
    <string name="tran_out">Result:</string>
    <string name="point_team1_name" translatable="false">OKC</string>
    <string name="point_team1_score" translatable="false">0</string>
    <string name="point_team2_name" translatable="false">NYC</string>
    <string name="point_team2_score" translatable="false">0</string>
    <string name="point_1p" translatable="false">+1 point</string>
    <string name="point_2p" translatable="false">+2 point</string>
    <string name="point_3p" translatable="false">+3 point</string>
    <string name="point_reset">reset</string>
    <string name="rate_dol">Dollar</string>
    <string name="rate_euro">Euro</string>
    <string name="rate_won">Won</string>
    <string name="rate_hint">Please Input Amount of RMB</string>
    <string name="cfg_save_label">Save</string>
    <string name="rate_openCfg_label">Config</string>
    <string name="imfor_hint">Please input keyword</string>
    <string name="imfor_btn_search">Search</string>
    <string name="imfor_text_label">College announcement search</string>
    <string name="imfor_text_label2">Result:</string>
</resources>
