<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tran_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tran_input"
        android:inputType="number" />

    <Button
        android:id="@+id/tran_bot1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tran_bot" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tran_out"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tran_show"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:textSize="20sp"
        android:text="" />

</LinearLayout>
