<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:autoLink="web"
    tools:context=".ImformationActivity">

    <TextView
        android:id="@+id/imformation_show"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/imfor_text_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        tools:layout_editor_absoluteX="29dp" />

    <EditText
        android:id="@+id/imformation_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/imfor_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imformation_show"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:onClick="onSearch"
        android:text="@string/imfor_btn_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imformation_show"
        app:layout_constraintVertical_bias="0.174" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginBottom="396dp"
        android:text="@string/imfor_text_label2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="394dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ListView
            android:id="@+id/resultlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>